<resources>
    <string name="app_name">DoctorsAppointment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home">Home</string>
    <string name="appointments">Appointments</string>
    <string name="doctors">Doctors</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upcoming">Upcoming</string>
    <string name="no_upcoming_appointment">No upcoming appointment, order or diagnostic test</string>
    <string name="services">Services</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="email_is_required">Email field is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="logout">Logout</string>
    <string name="morning">Morning</string>
    <string name="english">English</string>
    <string name="general_practitioner">General Practitioner</string>
    <string name="afternoon">Afternoon</string>
    <string name="amount">₦22,000</string>
    <string name="first_name_error">First Name field is required</string>
    <string name="last_name_error">Last name field is required</string>
    <string name="confirm_password">Confirm Password</string>
</resources>